# Metadata
[metadata]
version = attr: redisent.__version__
license_files = LICENSE

# Testing

## Flake8
[flake8]
max-line-length = 160
rst-roles =
    attr,class,func,meth,mod,obj,ref,term,
    # Python programming language:
    py:func,py:meth,py:mod,py:class,py:exc,py:attr,py:obj,py:const

## pytest
[tool:pytest]
addopts = --cov=redisent --cov-report html:./report/html --cov-report term --cov-config=setup.cfg
testpaths = testing/
junit_family=xunit1

## cov
[coverage:report]
fail_under = 25
show_missing = true

[coverage:run]
branch = true
omit = testing/* .venv/*

[paths]
source = src/redisent/

## mypy
[mypy]
mypy_path = redisent
warn_return_any = True
show_error_codes = True

[mypy-aioredis.*,fakeredis.*,setuptools.*]
ignore_missing_imports = True
