; Metadata
[metadata]
version = attr: redisent.__version__

; Flake8
[flake8]
max-line-length = 160
rst-roles =
    attr,class,func,meth,mod,obj,ref,term,
    ; Python programming language:
    py:func,py:meth,py:mod,py:class,py:exc,py:attr,py:obj,py:const

; pytest
[tool:pytest]
testpaths = testing/
junit_family=xunit1

; cov
[coverage:report]
fail_under = 25
show_missing = true

[coverage:run]
branch = true
omit = testing/* .venv/*

[paths]
source = src/redisent/

; mypy
[mypy]
mypy_path = stubs/:src/
warn_return_any = True
show_error_codes = True

; tox
[tox]
skip_missing_interpreters = True
